--- a/TradeMaster6000/Client/Pages/TickData.razor
+++ b/TradeMaster6000/Client/Pages/TickData.razor
@@ -2,13 +2,47 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.SignalR.Client
+@using TradeMaster6000.Shared
 @inject NavigationManager NavigationManager
 @implements IAsyncDisposable
 @attribute [Authorize]
 
 <h3>Ticks</h3>
-<button @onclick="@StartTicker">Start Ticker</button>
-<button @onclick="@StopTicker">Stop Ticker</button>
+
+<button @onclick="@NewOrder">New Order</button>
+
+@if (showForm)
+{
+    <div id="orderForm">
+        <EditForm Model="tradeOrder" OnValidSubmit="@HandleValidSubmit">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+
+            <InputText @bind-Value="tradeOrder.Entry" />
+            <InputText @bind-Value="tradeOrder.StopLoss" />
+            <InputText @bind-Value="tradeOrder.TakeProfit" />
+
+            <button type="submit">Submit</button>
+        </EditForm>
+    </div>
+}
+
+<EditForm Model="tradeOrder" OnValidSubmit="@StopOrderHandler">
+    @*<DataAnnotationsValidator />
+    <ValidationSummary />*@
+
+    <InputNumber @bind-Value="tradeOrder.Id" />
+
+    <button type="submit">StopTicker</button>
+</EditForm>
+
+<ul id="orderList">
+    @foreach (var order in orders)
+    {
+        <li>@order.Id @order.Entry</li>
+    }
+</ul>
+
 <ul id="tickList">
     @foreach (var tick in ticks)
     {
@@ -16,21 +50,34 @@
     }
 </ul>
 
-<hr />
-
-<button @onclick="@StartTicker2">Start Ticker 2</button>
-<button @onclick="@StopTicker2">Stop Ticker 2</button>
-<ul id="tickList2">
-    @foreach (var tick in ticks2)
+<ul id="logsList">
+    @foreach (var log in logs)
     {
-        <li>@tick</li>
+        <li>@log</li>
     }
 </ul>
 
+<hr />
+
+@*<button @onclick="@StartTicker2">Start Ticker 2</button>
+    <button @onclick="@StopTicker2">Stop Ticker 2</button>
+    <ul id="tickList2">
+        @foreach (var tick in ticks2)
+        {
+            <li>@tick</li>
+        }
+    </ul>*@
+
 @code {
+
+    private bool showForm = false;
     private HubConnection hubConnection;
     private List<string> ticks = new List<string>();
     private List<string> ticks2 = new List<string>();
+    private List<TradeOrder> orders = new List<TradeOrder>();
+    private TradeOrder tradeOrder = new TradeOrder();
+    private List<string> logs = new List<string>();
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -38,10 +85,23 @@
             .WithUrl(NavigationManager.ToAbsoluteUri("/tickdata"))
             .Build();
 
+
         hubConnection.On<decimal>("ReceiveTick", (tick) =>
         {
             var encodedTick = $"LTP: {tick}";
             ticks.Add(encodedTick);
+            StateHasChanged();
+        });
+        hubConnection.On<string>("ReceiveLog", (log) =>
+        {
+            var encodedLog = $"logger: {log}";
+            logs.Add(encodedLog);
+            StateHasChanged();
+        });
+
+        hubConnection.On<List<TradeOrder>>("ReceiveList", (list) =>
+        {
+            orders = list;
             StateHasChanged();
         });
 
@@ -53,6 +113,88 @@
         });
 
         await hubConnection.StartAsync();
+
+        await GetOrders();
+    }
+
+    private void NewOrder()
+    {
+        showForm = true;
+        StateHasChanged();
+    }
+
+    private async Task GetOrders()
+    {
+        await hubConnection.SendAsync("GetOrders");
+    }
+
+    private async Task HandleValidSubmit(EditContext editContext)
+    {
+        try
+        {
+            await hubConnection.SendAsync("StartTicker", (TradeOrder)editContext.Model);
+
+            //var response = await Http.PostAsJsonAsync<RequestUrl>("RequestUrl", (RequestUrl)editContext.Model);
+
+            //var errors = await response.Content
+            //    .ReadFromJsonAsync<Dictionary<string, List<string>>>();
+
+            //if (response.StatusCode == HttpStatusCode.BadRequest &&
+            //        errors.Count() > 0)
+            //{
+            //    customValidation.DisplayErrors(errors);
+            //}
+            //else if (!response.IsSuccessStatusCode)
+            //{
+            //    throw new HttpRequestException(
+            //        $"Validation failed. Status Code: {response.StatusCode}");
+            //}
+            //else
+            //{
+            //    disabled = true;
+            //    messageStyles = "color:green";
+            //    message = "The form has been processed.";
+            //}
+        }
+        catch (Exception e)
+        {
+
+        }
+    }
+
+    private async Task StopOrderHandler(EditContext editContext)
+    {
+        try
+        {
+            await hubConnection.SendAsync("StopTicker", (TradeOrder)editContext.Model);
+
+
+            //var response = await Http.PostAsJsonAsync<RequestUrl>("RequestUrl", (RequestUrl)editContext.Model);
+
+            //var errors = await response.Content
+            //    .ReadFromJsonAsync<Dictionary<string, List<string>>>();
+
+            //if (response.StatusCode == HttpStatusCode.BadRequest &&
+            //        errors.Count() > 0)
+            //{
+            //    customValidation.DisplayErrors(errors);
+            //}
+            //else if (!response.IsSuccessStatusCode)
+            //{
+            //    throw new HttpRequestException(
+            //        $"Validation failed. Status Code: {response.StatusCode}");
+            //}
+            //else
+            //{
+            //    disabled = true;
+            //    messageStyles = "color:green";
+            //    message = "The form has been processed.";
+            //}
+        }
+        catch (Exception e)
+        {
+
+        }
     }
 
     private async Task StartTicker()
