--- a/TradeMaster6000/Client/Pages/CreateOrder.razor
+++ b/TradeMaster6000/Client/Pages/CreateOrder.razor
@@ -26,7 +26,7 @@
         <p>stoploss: </p><InputNumber @bind-Value="tradeOrder.StopLoss" />
         <br />
 
-        <p>take profit: </p><InputNumber @bind-Value="tradeOrder.TakeProfit" />
+        <p>take profit: </p><InputNumber @bind-Value="tradeOrder.TriggerPrice" />
         <br />
 
         <p>quantity: </p><InputNumber @bind-Value="tradeOrder.Quantity" />
@@ -66,6 +66,16 @@
         <p>transaction type: </p><InputSelect @bind-Value="tradeOrder.TransactionType">
             @{
                 foreach (var type in Enum.GetValues(typeof(TransactionType)))
+                {
+                    <option value="@type">@type</option>
+                }
+            }
+        </InputSelect>
+        <br />
+
+        <p>variety: </p><InputSelect @bind-Value="tradeOrder.Variety">
+            @{
+                foreach (var type in Enum.GetValues(typeof(Variety)))
                 {
                     <option value="@type">@type</option>
                 }
