--- a/TradeMaster6000/Client/Pages/CreateOrder.razor
+++ b/TradeMaster6000/Client/Pages/CreateOrder.razor
@@ -119,28 +119,8 @@
     {
         try
         {
-            await hubConnection.SendAsync("StartTicker", (TradeOrder)editContext.Model);
-            //var response = await Http.PostAsJsonAsync<RequestUrl>("RequestUrl", (RequestUrl)editContext.Model);
+            await hubConnection.SendAsync("StartOrderWork", (TradeOrder)editContext.Model);
 
-            //var errors = await response.Content
-            //    .ReadFromJsonAsync<Dictionary<string, List<string>>>();
-
-            //if (response.StatusCode == HttpStatusCode.BadRequest &&
-            //        errors.Count() > 0)
-            //{
-            //    customValidation.DisplayErrors(errors);
-            //}
-            //else if (!response.IsSuccessStatusCode)
-            //{
-            //    throw new HttpRequestException(
-            //        $"Validation failed. Status Code: {response.StatusCode}");
-            //}
-            //else
-            //{
-            //    disabled = true;
-            //    messageStyles = "color:green";
-            //    message = "The form has been processed.";
-            //}
         }
         catch (Exception e)
         {
