--- a/TradeMaster6000/Client/Pages/Orders.razor
+++ b/TradeMaster6000/Client/Pages/Orders.razor
@@ -9,7 +9,11 @@
 
 <h1>Orders</h1>
 
+<br />
+
 <button @onclick="@NewOrder">New Order</button>
+
+<br />
 
 <table>
     <tr>
@@ -33,13 +37,6 @@
 
 <hr />
 
-@*<ul id="tickList">
-    @foreach (var tick in ticks)
-    {
-        <li>@tick</li>
-    }
-</ul>*@
-
 <ul id="logsList">
     @foreach (var log in logs)
     {
@@ -47,26 +44,23 @@
     }
 </ul>
 
+<hr />
 
-
-@*<button @onclick="@StartTicker2">Start Ticker 2</button>
-    <button @onclick="@StopTicker2">Stop Ticker 2</button>
-    <ul id="tickList2">
-        @foreach (var tick in ticks2)
-        {
-            <li>@tick</li>
-        }
-    </ul>*@
+@*<ul id="orderDataList">
+    @foreach (var data in orderData)
+    {
+        <li>status message: @data.StatusMessage - status: @data.Status</li>
+    }
+</ul>*@
 
 @code {
 
     private bool showForm = false;
     private HubConnection hubConnection;
-    //private List<string> ticks = new List<string>();
-    //private List<string> ticks2 = new List<string>();
     private List<TradeOrder> orders = new List<TradeOrder>();
     private TradeOrder tradeOrder = new TradeOrder();
     private List<string> logs = new List<string>();
+    private List<KiteConnect.Order> orderData = new List<KiteConnect.Order>();
 
 
     protected override async Task OnInitializedAsync()
@@ -75,12 +69,6 @@
             .WithUrl(NavigationManager.ToAbsoluteUri("/orders"))
             .Build();
 
-        //hubConnection.On<decimal>("ReceiveTick", (tick) =>
-        //{
-        //    var encodedTick = $"LTP: {tick}";
-        //    ticks.Add(encodedTick);
-        //    StateHasChanged();
-        //});
         hubConnection.On<List<string>>("ReceiveLogs", (logs) =>
         {
             this.logs = logs;
@@ -99,17 +87,17 @@
             StateHasChanged();
         });
 
-        //hubConnection.On<decimal>("ReceiveTick2", (tick) =>
-        //{
-        //    var encodedTick = $"LTP: {tick}";
-        //    ticks2.Add(encodedTick);
-        //    StateHasChanged();
-        //});
+        hubConnection.On<List<KiteConnect.Order>>("ReceiveOrderData", (list) =>
+        {
+            orderData = list;
+            StateHasChanged();
+        });
 
         await hubConnection.StartAsync();
 
         await GetOrders();
         await GetLogList();
+        await GetOrderData();
 
     }
 
@@ -122,62 +110,20 @@
     {
         await hubConnection.SendAsync("GetOrders");
     }
+
+    private async Task GetOrderData()
+    {
+        await hubConnection.SendAsync("GetOrderData");
+    }
     private async Task GetLogList()
     {
         await hubConnection.SendAsync("GetLogList");
     }
 
-    //private async Task StopOrderHandler(EditContext editContext)
-    //{
-    //    try
-    //    {
-    //        await hubConnection.SendAsync("StopTicker", (TradeOrder)editContext.Model);
-
-
-    //        //var response = await Http.PostAsJsonAsync<RequestUrl>("RequestUrl", (RequestUrl)editContext.Model);
-
-    //        //var errors = await response.Content
-    //        //    .ReadFromJsonAsync<Dictionary<string, List<string>>>();
-
-    //        //if (response.StatusCode == HttpStatusCode.BadRequest &&
-    //        //        errors.Count() > 0)
-    //        //{
-    //        //    customValidation.DisplayErrors(errors);
-    //        //}
-    //        //else if (!response.IsSuccessStatusCode)
-    //        //{
-    //        //    throw new HttpRequestException(
-    //        //        $"Validation failed. Status Code: {response.StatusCode}");
-    //        //}
-    //        //else
-    //        //{
-    //        //    disabled = true;
-    //        //    messageStyles = "color:green";
-    //        //    message = "The form has been processed.";
-    //        //}
-    //    }
-    //    catch (Exception e)
-    //    {
-
-    //    }
-    //}
-
-    //private async Task StartTicker()
-    //{
-    //    await hubConnection.SendAsync("StartTicker");
-    //}
     private async Task StopTicker(int id)
     {
-        await hubConnection.SendAsync("StopTicker", id);
+        await hubConnection.SendAsync("StopOrderWork", id);
     }
-    //private async Task StartTicker2()
-    //{
-    //    await hubConnection.SendAsync("StartTicker2");
-    //}
-    //private async Task StopTicker2()
-    //{
-    //    await hubConnection.SendAsync("StopTicker2");
-    //}
 
     public bool IsConnected =>
 hubConnection.State == HubConnectionState.Connected;
