--- a/TradeMaster6000/Client/_Imports.razor
+++ b/TradeMaster6000/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using TradeMaster6000.Client
 @using TradeMaster6000.Client.Shared
 @using Microsoft.AspNetCore.Components.Web.Extensions.Head
+@using KiteConnect;
