--- a/TradeMaster6000/Client/Pages/Orders.razor
+++ b/TradeMaster6000/Client/Pages/Orders.razor
@@ -37,6 +37,7 @@
 
 <hr />
 
+<h1>Logs:</h1>
 <ul id="logsList">
     @foreach (var log in logs)
     {
@@ -46,6 +47,7 @@
 
 <hr />
 
+<h1>Order Data:</h1>
 <ul id="orderDataList">
     @foreach (var data in orderData)
     {
