--- a/TradeMaster6000/Client/Pages/CreateOrder.razor
+++ b/TradeMaster6000/Client/Pages/CreateOrder.razor
@@ -70,7 +70,7 @@
     protected override async Task OnInitializedAsync()
     {
         hubConnection = new HubConnectionBuilder()
-            .WithUrl(NavigationManager.ToAbsoluteUri("/orders"))
+            .WithUrl(NavigationManager.ToAbsoluteUri("/orderhub"))
             .Build();
 
         hubConnection.On<List<TradeInstrument>>("ReceiveInstruments", (instruments) =>
