and the day was saved by the man him self... Asynchronos!

--- a/TradeMaster6000/Client/Pages/Orders.razor
+++ b/TradeMaster6000/Client/Pages/Orders.razor
@@ -61,7 +61,7 @@
 
     private bool showForm = false;
     private HubConnection hubConnection;
-    private static List<TradeOrder> orders = new List<TradeOrder>();
+    private List<TradeOrder> orders = new List<TradeOrder>();
     private TradeOrder tradeOrder = new TradeOrder();
 
     protected override async Task OnInitializedAsync()
