--- a/TradeMaster6000/Client/_Imports.razor
+++ b/TradeMaster6000/Client/_Imports.razor
@@ -9,4 +9,7 @@
 @using TradeMaster6000.Client
 @using TradeMaster6000.Client.Shared
 @using Microsoft.AspNetCore.Components.Web.Extensions.Head
-@using KiteConnect;
+@using KiteConnect
+@using Microsoft.Extensions.Logging
+@using Radzen
+@using Radzen.Blazor
