--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -13,13 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="chatting">
-                <span class="oi oi-plus" aria-hidden="true"></span> Chatting
+            <NavLink class="nav-link" href="orders">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="orders">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
+            <NavLink class="nav-link" href="orderhistory">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Order history
             </NavLink>
         </li>
     </ul>
